# unified-agent

./: .env.example  .gitignore  Architecture.md  Contributing.md  LICENSE  README.md  Roadmap.md  pyproject.toml  test_memory_manual.py
docs/: getting-started.md  writing-a-personality.md  writing-a-tool.md  writing-an-adapter.md
examples/: __init__.py  custom_tool_example.py  minimal_cli_chat.py  sandbox_and_web_tools_demo.py  switch_personality.py
personalities/assistant/: greetings.txt  rules.json  style.md  system.md
personalities/coding/: greetings.txt  rules.json  style.md  system.md
personalities/tester/: greetings.txt  rules.json  style.md  system.md
tests/: __init__.py  conftest.py  test_config.py  test_examples.py  test_logging.py  test_package.py  test_personality.py
tests/test_conversation/: test_context_builder.py  test_manager.py
tests/test_core/: test_agent.py  test_factory.py
tests/test_database/: __init__.py  test_engine.py  test_models.py
tests/test_interfaces/: __init__.py  test_cli.py  test_discord_bot.py  test_web_api.py
tests/test_memory/: test_knowledge.py  test_long_term.py  test_manager.py  test_short_term.py
tests/test_models/: test_fake_adapter.py  test_lmstudio_adapter.py  test_manager.py  test_ollama_adapter.py  test_openai_compat_adapter.py
tests/test_sandbox/: __init__.py  test_docker_manager.py  test_manager.py  test_registry.py  test_risk_detection.py
tests/test_tools/: test_base.py  test_calculator.py  test_filesystem.py  test_registry.py  test_sandbox_backend.py  test_sandbox_execute.py  (+3 more)
ua/: __init__.py
(+54 files in other folders)
