[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unified-agent"
version = "0.1.0"
description = "One Mind. Every Interface."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Unified Agent Team" }]
keywords = ["agent", "ai", "unified", "interface"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "httpx",
    "python-dotenv",
    "pydantic-settings>=2.14.2",
    "aiosqlite>=0.22.1",
]

[project.optional-dependencies]
discord = ["discord.py"]
web = ["fastapi", "uvicorn"]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["ua"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
